# fast_succinct_trie

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bench/: CMakeLists.txt  IPAdic.tsv  README.md  bench.cpp  formatter.py  plotter.py  run_bench.py  words.txt
bench/darts/: darts.h
bench/dastrie/: dastrie.h
bench/essentials/: essentials.hpp
bench/scripts/: formatter.py  plotter.py  run_bench.py
include/: compact_array.hpp  fst.hpp
include/surf/: bitvector.hpp  config.hpp  hash.hpp  label_vector.hpp  louds_dense.hpp  louds_sparse.hpp  popcount.h  rank.hpp  select.hpp  suffix.hpp  surf_builder.hpp
sample/: sample.cpp
scripts/: run_bench.sh
tests/: CMakeLists.txt  test_fst.cpp
